# MarkupSegmentation

./: metrics.py  pyproject.toml  segmentation.ipynb  test.py
