[tool.poetry]
name = "markup-segmentation"
version = "0.1.0"
description = ""
authors = ["Alexander Kustenkov <kustaa@ispras.ru>"]
readme = "README.md"
packages = [{include = "markup_segmentation"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
transformers = "^4.38.2"
beautifulsoup4 = "^4.12.3"
torch = "^2.2.1"
scikit-learn = "^1.4.1.post1"
evaluate = "^0.4.1"
seqeval = "^1.2.2"
lxml = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
